--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Friendly Chat",
-  "short_name": "Friendly Chat",
+  "name": "World Without Walls",
+  "short_name": "World Without Walls",
   "start_url": "/index.html",
   "display": "standalone",
   "orientation": "portrait"
